examples/negative/pub_enforcement/violation_import/lib.kai
# Negative fixture (#511 / smoke for #510): `secret` is not `pub`,
# so callers reaching it via `import lib` must be rejected.

pub fn visible() : Int = 1

fn secret() : Int = 2
